# gover

./: meson.build  meson_options.txt
src/: gover-canvas.c  gover-canvas.h  gover.c  gover.h  main.c  meson.build
subprojects/: gtk4-layer-shell.wrap
